--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
     align-items: center;
     justify-content: center;
     padding: 20px;
+    padding-top: 50px;
     transition: var(--transition);
 }
 
